[#8771] Refactor Chart component